Fix overflow issue

--- a/_sass/_structure.scss
+++ b/_sass/_structure.scss
@@ -1,5 +1,6 @@
 html {
   background-color: $bg-color;
+  overflow-x: hidden;
 }
 
 body {
